--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body class="bg-light">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
